--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,46 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "sourceType": "module"
-    },
-    "rules": {
-        "indent": ["error", 4, { "SwitchCase": 1 }],
-        "linebreak-style": ["error", "unix"],
-        "quotes": ["error", "single"],
-        "semi": ["error", "always"],
-        "no-unused-vars": "warn",
-        "no-console": "warn",
-        "camelcase": "warn",
-        "max-len": ["warn", 132]
-    },
-    "globals": {
-        "require": true,
-        "window": true,
-        "L": true,
-        "d3": true,
-        "chroma": true,
-        "GeoTIFF": true
-    }
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "rules": {
+    "indent": [
+      "error",
+      4,
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "no-unused-vars": "warn",
+    "no-console": "warn",
+    "camelcase": "warn",
+    "max-len": [
+      "warn",
+      132
+    ]
+  },
+  "globals": {
+    "require": true,
+    "window": true,
+    "L": true,
+    "d3": true,
+    "chroma": true,
+    "GeoTIFF": true
+  }
 }
